fix a bug (too big font on slowly conn)

--- a/3/content/page/desktop.css
+++ b/3/content/page/desktop.css
@@ -5,6 +5,7 @@
 
 .logodiv{
     font-family: 'MainFont1';
+    font-size: 65px;
 }
 #info{
 	font-family: 'MainFont1';
