--- a/3/content/page/mobile.css
+++ b/3/content/page/mobile.css
@@ -10,6 +10,7 @@
 }
 .logodiv{
     font-family: 'MainFont1';
+    font-size: 45px;
 }
 #info{
 	font-family: 'MainFont1';
